# hangul2hanja_EPUB_converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  convert-samples.ps1  pyproject.toml  requirements.txt
docs/: ux-improvement-plan.md
h2h_converter/: __init__.py  cli.py  config.py  doctor.py  epub.py  installer.py  ruby.py  utagger.py
sample_epubs/: 신조선 혁명론 (박열 지음, 서석연 옮김).epub
tests/: test_cli.py  test_epub.py  test_ruby.py  test_utagger.py
